[package]
name = "matui"
version = "0.4.5"
authors = ["Phil Kulak"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
crossterm = "0.28"
config = { version = "0.15", features = ["toml"] }
dirs = "6.0"
emojis = "0.6"
futures = "0.3.31"
human_bytes = "0.4.3"
image = "0.25"
linkify = "0.10"
lazy_static = "1.5"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
matrix-sdk = { version = "0.9.0", features = ["markdown"] }
mime = "0.3"
native-dialog = "0.7.0"
notify-rust = { version = "4.11", features = ["images"] }
notify = "8.0"
once_cell = "1.20"
open = "5.3"
rand = "0.8.5"
ratatui = "0.29.0"
regex = "1.11.1"
ruma = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0"
tempfile = "3"
textwrap = "0.16.1"
timeago = "0.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1

