[package]
name = "matui"
version = "0.6.0"
authors = ["Phil Kulak"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
crossterm = "0.29"
config = { version = "0.15", features = ["toml"] }
debounced = "0.2.0"
dirs = "6.0"
emojis = "0.8"
futures = "0.3.31"
human_bytes = "0.4.3"
image = "0.25"
linkify = "0.10"
lazy_static = "1.5"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
matrix-sdk = { version = "0.16.0", features = ["markdown"] }
mime = "0.3"
native-dialog = "0.9"
notify-rust = { version = "4.11", features = ["images"] }
notify = "8.2"
once_cell = "1.21"
open = "5.3"
rand = "0.9.2"
ratatui = "0.30.0"
regex = "1.12.2"
ruma = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0"
tempfile = "3"
textwrap = "0.16.2"
timeago = "0.5"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1
