[package]
name = "matui"
version = "0.6.1"
authors = ["Phil Kulak"]
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
crossterm = "0.29"
config = { version = "0.15", features = ["toml"] }
dirs = "6.0"
emojis = "0.8"
futures = "0.3.32"
human_bytes = "0.4.3"
image = "0.25"
linkify = "0.11"
lazy_static = "1.5"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
matrix-sdk = { version = "0.18.0", features = ["markdown", "bundled-sqlite"] }
mime = "0.3"
notify-rust = { version = "4.17", features = ["images"] }
notify = "8.2"
once_cell = "1.21"
open = "5.3"
rand = "0.10.1"
ratatui = "0.30.1"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0"
termimad = "0.34.1"
tempfile = "3"
textwrap = "0.16.2"
timeago = "0.6"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }

# make sure notify-rust pulls in a zbus build that uses tokio
zbus = { version = "5", features = ["tokio"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13.11", features = ["file_chooser"] }
url = "2.5"

[target.'cfg(not(target_os = "linux"))'.dependencies]
native-dialog = "0.9"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1
